--- a/hrm-system/package.json
+++ b/hrm-system/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "next": "16.0.1",
+    "next-auth": "^4.24.13",
     "pg": "^8.11.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
